include(CTest)

function(add_test_executable TEST_NAME SOURCE_FILE)
    add_executable(${TEST_NAME} ${SOURCE_FILE})
    target_link_libraries(${TEST_NAME} PRIVATE sfl::sfl)
    set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "Tests")
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endfunction()

add_test_executable(test_compact_vector compact_vector.cpp)
add_test_executable(test_segmented_vector segmented_vector.cpp)
add_test_executable(test_small_flat_map small_flat_map.cpp)
add_test_executable(test_small_flat_set small_flat_set.cpp)
add_test_executable(test_small_flat_multimap small_flat_multimap.cpp)
add_test_executable(test_small_flat_multiset small_flat_multiset.cpp)
add_test_executable(test_small_unordered_flat_map small_unordered_flat_map.cpp)
add_test_executable(test_small_unordered_flat_multimap small_unordered_flat_multimap.cpp)
add_test_executable(test_small_unordered_flat_multiset small_unordered_flat_multiset.cpp)
add_test_executable(test_small_unordered_flat_set small_unordered_flat_set.cpp)
add_test_executable(test_small_vector small_vector.cpp)
